Fix Spacing

--- a/css/base.css
+++ b/css/base.css
@@ -22,7 +22,7 @@ Green: #4CAF7F;
 
     cursor: url(./../img/cursor/cursor.png), auto;
 
-    --spacing: 100px;
+    --spacing: 3rem;
 }
 
 html {
@@ -239,6 +239,42 @@ main {
 }
 /* iPad, Landscape Mode, and HD Monitors */
 @media only screen and (min-width: 992px) {
+
+    body {
+        display: grid;
+        grid-template: 100px 1fr / 300px 1fr;
+        grid-template-areas: "header header"
+                             "nav main";
+    }
+    
+    header {
+        display: flex;
+        grid-area: header;
+    }
+
+    nav {
+        grid-area: nav;
+        grid-column: 1 / 2;
+        width: 300px;
+    }
+
+    nav > ul {
+        flex-direction: column;
+        height: 100%;
+        border-bottom: 0;
+        justify-content: start;
+        padding-top: var(--spacing);
+    }
+
+    nav > ul > li {
+        font-size: 2rem;
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+    }
+
+    nav > ul > li:first-child {
+        margin-top: 0;
+    }
 
     .spacer {
         display: none;
